--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
     <div style="height: 20px;"></div>
 
     <div id="content">
-        <div id="img_options" style="width: 50%; padding-right: 10%; display: flex; flex-direction: column;">
+        <div id="img_options" style="position: relative; width: 50%; padding-right: 10%; display: flex; flex-direction: column;">
             <h2 style="margin-top: 0px;">Logo:</h2>
             <select id="logos_box" style="width: 100%; max-width: 400px;"></select>
             <h2>Color:</h2>
+            <input id="color_picker" type="color" style="width: 75px; height: 75px">
+            <h2 id="signature" style="margin: 0px; position: absolute; bottom: 0;">Created By: Aaron Cohen</h2>
         </div>
 
         <div id="img_output" style="display: flex; flex-direction: column; width: 50%;">
-            <embed id="svg_image" src="/svg/seng.svg" style="border-radius: 30px; background-color: white;"></embed>
+            <embed id="svg_image" src="/svg/seng.svg" type="image/svg+xml" style="border-radius: 30px; background-color: white;"></embed>
             <div style="height: 20px"></div>
             <button id="download_button">Download</button>
         </div>
